Import of ASCOPE/Net-Delicious-Export-1.1 from CPAN.
gitpan-cpan-distribution: Net-Delicious-Export
gitpan-cpan-version:      1.1
gitpan-cpan-path:         ASCOPE/Net-Delicious-Export-1.1.tar.gz
gitpan-cpan-author:       ASCOPE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
-# $Id: Changes,v 1.1 2004/02/09 19:35:17 asc Exp $
+# $Id: Changes,v 1.2 2004/02/12 13:44:46 asc Exp $
+
+1.1      Wed Feb 11 2004
+
+	 - Added N:D:E:Post
 
 1.0	 Mon Feb 09 2004
 
